@@ -1,3 +1,8 @@
+2007-10-13  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/tools/gimprectangletool.c
+	(gimp_rectangle_tool_apply_aspect): Use ROUND() not round().
+
 2007-10-13  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/colormap-remap.c (run): don't use the last-used
